--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "svg-pan-zoom": "^3.2.9"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-jshint": "^2.0.1",
+    "jsdom": "^9.4.2",
     "jshint": "^2.9.2",
+    "mocha": "^3.0.2",
+    "mocha-jsdom": "^1.1.0",
     "webpack-stream": "^3.2.0"
   }
 }
